node-ports-only/node-port/httpd-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: httpd-nodeport-service
spec: 
  type: NodePort
  selector: 
    app: http-webserver
  ports: 
    - port: 8080
      targetPort: 80
      nodePort: 30001
